Refs #7031; Fix text overflow in stops name

--- a/app/assets/stylesheets/modules/_vj_collection.sass
+++ b/app/assets/stylesheets/modules/_vj_collection.sass
@@ -308,6 +308,11 @@
   .table-2entries > .t2e-head > .td > div > span::after
     bottom: -6px !important
 
+  .table-2entries > .t2e-head > .td > div > span
+    text-overflow: ellipsis
+    overflow: hidden
+    white-space: nowrap
+
   .table.table-2entries .t2e-item-list .t2e-item
     background-color: #F9F9F9
 
